# phishing-detector

./: .env  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
comparative_analysis/: 2024_11_22_14_44_36_756696_phishing_scan_report.json  Analysis.ipynb
source/: __init__.py  data_collector.py  settings.py
source/data_collector/: __init__.py
source/detector/: __init__.py  detector.py  report.py
source/detector/scanners/: __init__.py  alive_scanner.py  chrome_safe_browsing_scanner.py  google_safe_browsing_api_scanner.py  google_safe_browsing_scanner.py  scanner.py  virus_total_scanner.py  website_status_scanner.py
tests/unit_tests/source/: test_data_collector.py
tests/unit_tests/source/detector/: test_detector.py
tests/unit_tests/source/detector/scanners/: test_alive_scanner.py
